2013-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp (npyHasIntegerSupport): New function to test if
	integer support was compiled in, also exported via Rcpp Modules to R

2013-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpy.h: Define R_NO_REMAP before including Rinternals to not
	define length(), error(), ... but rather Rf_length(), Rf_error()

	* src/cnpy.cpp: Add a bogus unused variable at the never-reached end
	of code (after an error exit) to silence the pedantic mode of g++

2012-07-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.0

	* src/cnpyMod.cpp:
	  (npySave): Support gzip'ed files for saving
	  (npyLoad): Support new argument 'dotranspose', plug a memory leak

	* src/cnpy.h (cnpy): Added npy_gzsave() function

	* man/RcppCNPy-package.Rd: Document new gzip-compression

	* demo/timings.R: Use new gzip-compression feature

	* vignettes/RcppCNPy-intro.Rnw: Updated as well

	* inst/NEWS.Rd: Updated as well

2012-07-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0

	* vignettes/RcppCNPy-intro.Rnw: Added vignette documentation

	* demo/timings.R: Added simple timing benchmark demo

2012-07-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpy.h: Include cstdint for int64_t if C++0x has been enabled
	* src/cnpyMod.cpp: Support integer types if C++0x available

	* tests/: Simple set of regression tests added

2012-07-05  Dirk Eddelbuettel  <edd@dexter>

	* src/cnpyMod.cpp: Added transpose() method to transparently deal
	with the Fortran-vs-C storage order difference between Python and R.
	Also added support for reading vectors.

	* src/cnpy.{cpp,h}: Added support for loading from .npy.gz files
	which is automagically enabled if the filename ends in ".gz"

2012-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* Initial version 0.0.1

	* src/cnpy.{cpp,h}: Numerous minor changes to conform to CRAN Policy

	* src/cnpyMod.cpp: Rcpp modules wrapping of two function npyLoad and